err_final.txt
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   C:\Users\ADMIN\Desktop\remmy-drips\Remitwise-Contracts\orchestrator\Cargo.toml
workspace: C:\Users\ADMIN\Desktop\remmy-drips\Remitwise-Contracts\Cargo.toml
    Checking bill_payments v0.1.0 (C:\Users\ADMIN\Desktop\remmy-drips\Remitwise-Contracts\bill_payments)
warning: unused imports: `DEFAULT_PAGE_LIMIT` and `MAX_PAGE_LIMIT`
 --> bill_payments\src\lib.rs:6:51
  |
6 |     ARCHIVE_LIFETIME_THRESHOLD, CONTRACT_VERSION, DEFAULT_PAGE_LIMIT, INSTANCE_BUMP_AMOUNT,
  |                                                   ^^^^^^^^^^^^^^^^^^
7 |     INSTANCE_LIFETIME_THRESHOLD, MAX_BATCH_SIZE, MAX_PAGE_LIMIT,
  |                                                  ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0382]: use of moved value: `caller`
   --> bill_payments\src\lib.rs:539:23
    |
463 |     pub fn pay_bill(env: Env, caller: Address, bill_id: u32) -> Result<(), Error> {
    |                               ------ move occurs because `caller` has type `soroban_sdk::Address`, which does not implement the `Copy` trait
...
532 |             (bill_id, caller, bill_external_ref),
    |                       ------ value moved here
...
539 |             (bill_id, caller, paid_amount),
    |                       ^^^^^^ value used here after move
    |
help: consider cloning the value if the performance cost is acceptable
    |
532 |             (bill_id, caller.clone(), bill_external_ref),
    |                             ++++++++

For more information about this error, try `rustc --explain E0382`.
warning: `bill_payments` (lib) generated 1 warning
error: could not compile `bill_payments` (lib) due to 1 previous error; 1 warning emitted
